...
                    />
                </Container>
                <Button
                    width={80}
                    height={30}
                    top={10}
                    text="OK"
                    onPress={() => onChange(currentDate)}
                />
            </Container>
        </Container>
    );
};
...
