...
                                            {
                                                text: 'Cancelar',
                                                onPress: () => null,
                                                style: 'cancel'
                                            },
                                            {
                                                text: 'Sair',
                                                onPress: () =>
                                                    navigation.navigate(
                                                        'Notifications'
                                                    )
                                            }
                                        ]
...
