...
        cacheFirst: false,
        query: `&user=${user?._id}&type=client`,
        size: 20
    });

    const loadMoreRatings = useCallback(() => {
        if (active === 'Profissional') {
            if (!loading && !fetching && isConnected && pagination.next)
                addPage();
        } else {
            if (
                !loadingClient &&
                !fetchingClient &&
...
                            text={'Profissional'}
                            active={active}
                            set={setActive}
                        />
                        <RatingNavigation
                            type={'client'}
                            text={'Cliente'}
                            active={active}
                            set={setActive}
                        />
                    </Line>
                )}
                <List
...
